Fix navigation on ie11
It was invisible, but setting the z-index to inherit, it fixes the problem.

--- a/wdn/templates_3.1/less/navigation/navigation.less
+++ b/wdn/templates_3.1/less/navigation/navigation.less
@@ -469,7 +469,7 @@
                 /* Secondaries */
                 
                 > ul {
-                    z-index: auto;
+                    z-index: inherit;
                     position: relative;
                     top: 0;
                     left: 0;
